# gaishi

./: README.md  build-env.yaml  dev-env.yaml  pyproject.toml
docs/: index.md
examples/configs/: unet.training.yaml
gaishi/: __init__.py  __main__.py  infer.py  preprocess.py  simulate.py  train.py
gaishi/configs/: __init__.py  global_config.py  model_config.py  preprocess_config.py  simulation_config.py
gaishi/generators/: __init__.py  polymorphism_data_generator.py  window_data_generator.py
gaishi/labelers/: __init__.py  binary_allele_labeler.py  binary_window_labeler.py  generic_labeler.py
gaishi/models/: __init__.py  etc_model.py  lr_model.py
gaishi/multiprocessing/: mp_manager.py
gaishi/parsers/: infer_parser.py  train_parser.py
gaishi/preprocessors/: feature_vector_preprocessor.py  genotype_matrix_preprocessor.py
gaishi/registries/: __init__.py  generic_registry.py  model_registry.py  stat_registry.py
gaishi/simulators/: __init__.py  feature_vector_simulator.py  genotype_matrix_simulator.py
gaishi/stats/: distance.py  metrics.py  private_mutation.py  spectrum.py
gaishi/utils/: __init__.py  io.py  utils.py
tests/: test___main__.py  test_infer.py  test_preprocess.py  test_simulate.py  test_train.py
tests/configs/: test_feature_config.py  test_global_config.py  test_model_config.py  test_preprocess_config.py  test_simulation_config.py
tests/data/: test.config.yaml
tests/generators/: test_polymorphism_data_generator.py  test_random_number_generator.py  test_window_data_generator.py
tests/labelers/: test_binary_allele_labeler.py  (+1 more)
(+32 files in other folders)
